kubernetes-manifests/cryptocurrency/cryptocurrency-app.yaml
# Crypto Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: crypto
  labels:
    name: crypto

---
########
# CRYPTO-SERVER
########

# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-server
  namespace: crypto
spec:
  replicas: 3
  selector:
    matchLabels:
      app: crypto-server
  template:
    metadata:
      labels:
        app: crypto-server
    spec:
      containers:
        - name: crypto-server
          image: austinloveless/crypto-server
          ports:
            - containerPort: 8080
---
# Crypto-Server Service
apiVersion: v1
kind: Service
metadata:
  name: crypto-server-service
  namespace: crypto
spec:
  selector:
    app: crypto-server
  ports:
    - name: crypto-server
      port: 80
      targetPort: 8080
  type: ClusterIP
