kubernetes-manifests/cryptocurrency/cryptocurrency-grafana.yaml
---
########
# CRYPTO-GRAFANA
########

# Grafana Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: crypto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsUser: 472
        fsGroup: 1
      containers:
        - name: grafana
          image: grafana/grafana:7.3.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: grafana-persistent-storage
              mountPath: /var/lib/grafana
          ports:
            - name: web
              containerPort: 3000
      volumes:
        - name: grafana-persistent-storage
          emptyDir: {}

---
# Grafana Service
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: crypto
spec:
  selector:
    app: grafana
  ports:
    - name: grafana
      port: 80
      targetPort: 3000
      nodePort: 30000
  type: NodePort

---
# Grafana Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-ingress
  namespace: crypto
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: grafana-service
              servicePort: 80
